add robotframework-uds to AIO build pipeline

--- a/config/repositories/repositories.conf
+++ b/config/repositories/repositories.conf
@@ -19,6 +19,7 @@ robotframework-robotlog2db=
 robotframework-documentation=
 robotframework-doip=
 robotframework-prometheus=
+robotframework-uds=
 robotframework=develop_6.1
 
 testresultwebapp=
