--- a/config/repositories/repositories.conf
+++ b/config/repositories/repositories.conf
@@ -19,7 +19,7 @@ robotframework-robotlog2db=
 robotframework-documentation=
 robotframework-doip=
 robotframework-prometheus=
-robotframework-uds=ntd1hc/bug/fix-docstring-issue
+robotframework-uds=
 robotframework=develop_6.1
 
 testresultwebapp=
